@@ -6,6 +6,8 @@
 [Global]
 InputQuantity=8
 OutputQuantity=8
+RmlPort=5858
+CunctatorPort=3749
 
 [Audio]
 DelayChangePercent=5
